welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: not found: value a
if(noDoubles==true){if(a==b){if(a==6 && b==6){return 7}else{return a+b+1}}
                       ^withoutDoubles:2: error: not found: value a
if(noDoubles==true){if(a==b){if(a==6 && b==6){return 7}else{return a+b+1}}
                                ^withoutDoubles:2: error: not found: value a
if(noDoubles==true){if(a==b){if(a==6 && b==6){return 7}else{return a+b+1}}
                                                                   ^withoutDoubles:3: error: not found: value a
                    else{return a+b}}
                                ^withoutDoubles:4: error: not found: value a
else{return a+b}
            ^