welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
if(noDoubles==true){if(a==b){if(a==6 && b==6){return 7}else{return a+b+1}}
                    else{return a+b}}
else{return a+b}
}